Fix mobile webpage layout issues

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -42,19 +42,16 @@
   }
 
   .ksah-description p {
-    text-indent: 1em;
     margin-bottom: 1.25rem;
   }
 }
 
 #header.scroll > div:first-child {
+  background-color: rgba(255, 255, 255, 0.95);
   @apply bg-page md:bg-white/90 md:backdrop-blur-md;
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
   box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
-}
-.dark #header.scroll > div:first-child,
-#header.scroll.dark > div:first-child {
-  @apply bg-page md:bg-[#030621e6] border-b border-gray-500/20;
-  box-shadow: none;
 }
 /* #header.scroll > div:last-child {
   @apply py-3;
